Make /serverinfo roles use pagination properly